--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,5 +6,5 @@ body {
   margin: 0;
   font-family: "Inter", sans-serif;
   color: #333;
-  background-color: #f6f9fc;
+  background-color: #f7f7f7;
 }
